testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpression.errors.txt
index.js(6,14): error TS2339: Property 't' does not exist on type 'Thing'.


==== index.js (1 errors) ====
    module.exports = class Thing {
        /**
         * @param {number} p
         */
        constructor(p) {
            this.t = 12 + p;
                 ~
!!! error TS2339: Property 't' does not exist on type 'Thing'.
        }
    }